--- a/vegastrike.config
+++ b/vegastrike.config
@@ -12,10 +12,11 @@
                 <bind key="=" modifier="none" command="AccelKey"/>
                 <bind key="/" modifier="none" command="RollLeftKey"/>
                 <bind key="*" modifier="none" command="RollRightKey"/>
-<!-- experimental
+
                 <bind key="x" modifier="none" command="FireKey"/>
                 <bind key="y" modifier="none" command="TargetKey"/>
--->
+                <bind key="c" modifier="none" command="RollRightKey"/>
+
                 <bind key="backspace" modifier="none" command="StopKey"/>
                 <bind key="\" modifier="none" command="StartKey"/>
                 <bind key="capslock" modifier="none" command="SheltonKey"/>
@@ -48,16 +49,17 @@
                 <bind key="s" modifier="none" command="Cockpit::YawRight"/>
 
                 <bind key="esc" modifier="none" command="Cockpit::Quit"/>
-<!--
+
 		<bind joystick="0" button="0" modifier="none" command="FireKey" />
-		<bind joystick="0" button="1" modifier="none" command="FireKey" />
-		<bind joystick="0" button="2" modifier="none" command="FireKey" />
--->
+		<bind joystick="0" button="1" modifier="none" command="MisSelKey" />
+		<bind joystick="0" button="2" modifier="none" command="MissileKey" />
+
 		<bind joystick="0" button="3" modifier="none" command="TargetKey" />
 		<axis name="x" joystick="0" axis="0"/>
 		<axis name="y" joystick="0" axis="1"/>
 
-	<!-- use this if you've got a throttle control
+
+		<!-- use this if you've got a throttle control
 			<axis name="throttle" joystick="0" axis="2"/>
 		-->
 
