--- a/vegastrike.config
+++ b/vegastrike.config
@@ -68,7 +68,18 @@
 		-->
 
 		<!-- if you have a joystick with an analogue hatswitch -->
-		<axis name="hatswitch" joystick="0" axis="2"/>
+		<axis name="hatswitch" nr="0" margin="0.1" joystick="0" axis="2">
+			<hatswitch value="-1.0"/>
+			<hatswitch value="-0.8"/>
+			<hatswitch value="-0.4"/>
+			<hatswitch value="0.1"/>
+		</axis>
+
+
+		<bind hatswitch="0" button="0" modifier="none" command="TargetKey" />
+		<bind hatswitch="0" button="1" modifier="none" command="TargetKey" />
+		<bind hatswitch="0" button="2" modifier="none" command="TargetKey" />
+		<bind hatswitch="0" button="3" modifier="none" command="TargetKey" />
 
 		<!-- for the future
 			<axis name="gun_x" joystick="1" axis="0"/>
