--- a/vegastrike.config
+++ b/vegastrike.config
@@ -2,6 +2,7 @@
         <bindings>
 		<bind key="S" modifier="none" command="Cockpit::SkipMusicTrack" />
  		<bind key="space" modifier="none" command="FireKey" />
+ 		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
 		<bind key="m" modifier="none" command="MisSelKey"/>
@@ -147,7 +148,7 @@
 			<var name="MaxTotalSounds" value="27"/>
 			<var name="frequency" value="22050"/>
 			<var name="Sound" value="true"/>
-			<var name="Music" value="true"/>
+			<var name="Music" value="false"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
 			<var name="panicplaylist" value="panic.m3u"/>
