analogue hatswitch should work
2001-10-24 Alexander Rawass <alexannika@users.sourceforge.net>

	* added support for analogue hatswitchm, should work now
	* ABKey can now be used on two or more bindings

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -14,10 +14,11 @@
                 <bind key="/" modifier="none" command="RollLeftKey"/>
                 <bind key="*" modifier="none" command="RollRightKey"/>
 
+<!-- experimental
                 <bind key="x" modifier="none" command="FireKey"/>
                 <bind key="y" modifier="none" command="TargetKey"/>
                 <bind key="c" modifier="none" command="RollRightKey"/>
-
+-->
                 <bind key="backspace" modifier="none" command="StopKey"/>
                 <bind key="\" modifier="none" command="StartKey"/>
                 <bind key="capslock" modifier="none" command="SheltonKey"/>
@@ -69,18 +70,19 @@
 		-->
 
 		<!-- if you have a joystick with an analogue hatswitch -->
-		<axis name="hatswitch" nr="0" margin="0.1" joystick="0" axis="2">
+		<axis name="hatswitch" nr="0" margin="0.15" joystick="0" axis="2">
 			<hatswitch value="-1.0"/>
-			<hatswitch value="-0.8"/>
-			<hatswitch value="-0.4"/>
+		<!--	<hatswitch value="-0.6"/>	-->
+			<hatswitch value="-0.19"/>
 			<hatswitch value="0.1"/>
 		</axis>
 
 
-		<bind hatswitch="0" button="0" modifier="none" command="TargetKey" />
-		<bind hatswitch="0" button="1" modifier="none" command="TargetKey" />
-		<bind hatswitch="0" button="2" modifier="none" command="TargetKey" />
-		<bind hatswitch="0" button="3" modifier="none" command="TargetKey" />
+		<bind hatswitch="0" button="0" modifier="none" command="ABKey" />
+<!--		<bind hatswitch="0" button="1" modifier="none" command="Cockpit::SwitchRVDU" />
+		<bind hatswitch="0" button="2" modifier="none" command="Cockpit::SwitchLVDU" />
+		<bind hatswitch="0" button="3" modifier="none" command="Cockpit::InsideLeft" />
+-->
 
 		<!-- for the future
 			<axis name="gun_x" joystick="1" axis="0"/>
