--- a/vegastrike.config
+++ b/vegastrike.config
@@ -17,7 +17,6 @@
 <!-- experimental
                 <bind key="x" modifier="none" command="FireKey"/>
                 <bind key="y" modifier="none" command="TargetKey"/>
-                <bind key="c" modifier="none" command="RollRightKey"/>
 -->
                 <bind key="backspace" modifier="none" command="StopKey"/>
                 <bind key="\" modifier="none" command="StartKey"/>
@@ -101,7 +100,7 @@
                 <color name="violet"	r="1.0" g="0.0" b="1.0" a="1.0"/>
                 <color name="light-blue"	r="0.68" g="0.9" b="1.0" a="1.0"/>
                 <color name="pink"	r="1.0" g="0.47" b="0.64" a="1.0"/>
-                <color name="dark-blue"	r="0.0" g="0.0" b="0.4" a="1.0"/>
+                <color name="dark-blue"	r="0.0" g="0.0" b="0.2" a="1.0"/>
 
 		<!-- colors to use in radar/target rectangles -->
 		<color name="enemy"		ref="red"/>
@@ -121,8 +120,8 @@
 		<color name="planets_ambient" r="0.3" g="0.5" b="0.5" a="1.0"/>
 		<color name="planets_diffuse" r="0.6" g="0.8" b="0.8" a="1.0"/>
 		<color name="planets_specular" r="0.5" g="0.6" b="0.6" a="1.0"/>
-		<!-- set this to dark-blue to get the real WC feeling -->
-		<color name="space_background" ref="black"/>
+		<!-- set this to dark-blue to get the real spacey feeling -->
+		<color name="space_background" ref="dark-blue"/>
 
         </colors>
 	<variables>
@@ -140,16 +139,18 @@
 			<var name="displaylists" value="false"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
-                	<var name="znear" value="1.0"/>
-                	<var name="zfar" value="50000"/>
+                	<var name="znear" value="4.0"/>
+                	<var name="zfar" value="100000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
+			<var name="background" value="true"/>
+			<var name="cockpit" value="false"/>
 		</section>
 		<section name="audio">
 			<var name="MaxSingleSounds" value="6"/>
 			<var name="MaxTotalSounds" value="27"/>
 			<var name="frequency" value="22050"/>
-			<var name="Sound" value="true"/>
+			<var name="Sound" value="false"/>
 			<var name="Music" value="false"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
