added explosion curtesy of H.E. day to constructed and 'filmed' the explosion!!!

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -150,7 +150,7 @@
 			<var name="MaxSingleSounds" value="6"/>
 			<var name="MaxTotalSounds" value="27"/>
 			<var name="frequency" value="22050"/>
-			<var name="Sound" value="false"/>
+			<var name="Sound" value="true"/>
 			<var name="Music" value="false"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
@@ -158,12 +158,12 @@
 			<var name="threadtime" value="2000"/>	
 		</section>
 		<section name="unitaudio">
-			<var name="afterburner" value="sfx10.wav"/>
+			<var name="afterburner" value="afterburner.wav"/>
 			<var name="cloak" value="sfx43.wav"/>
 			<var name="shield" value="sfx09.wav"/>
 			<var name="armor" value="sfx08.wav"/>
 			<var name="hull" value="sfx08.wav"/>
-			<var name="explode" value="sfx03.wav"/>
+			<var name="explode" value="explosion.wav"/>
 		</section>
 		<section name="general">
 			<var name="click_and_select"	value="1"/>
