--- a/vegastrike.config
+++ b/vegastrike.config
@@ -158,7 +158,7 @@
 			<var name="threadtime" value="2000"/>	
 		</section>
 		<section name="unitaudio">
-			<var name="afterburner" value="afterburner.wav"/>
+			<var name="afterburner" value="engine_5.wav"/>
 			<var name="cloak" value="sfx43.wav"/>
 			<var name="shield" value="sfx09.wav"/>
 			<var name="armor" value="sfx08.wav"/>
