adde dnice free explosion

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -163,7 +163,7 @@
 			<var name="shield" value="sfx09.wav"/>
 			<var name="armor" value="sfx08.wav"/>
 			<var name="hull" value="sfx08.wav"/>
-			<var name="explode" value="explosion.wav"/>
+			<var name="explode" value="EXPLOSIONPROMISING.wav"/>
 		</section>
 		<section name="general">
 			<var name="click_and_select"	value="1"/>
