--- a/vegastrike.config
+++ b/vegastrike.config
@@ -145,6 +145,18 @@
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
 			<var name="cockpit" value="false"/>
+
+			<var name="lightcutoff" value="0.06"/>
+			<var name="lightoptimalintensity" value="0.06"/>
+			<var name="lightsaturation" value="0.95"/>
+			<var name="separatespecularcolor" value="false"/>
+			<var name="numlights"	value="4"/>
+
+			<var name="MouseCursor"  value="false"/>
+
+			<var name="OptimizeVertexArrays" value="true"/>
+			<var name="OptimizeVertexCondition" value=".75"/>
+			<var name="ModelDetail" value="1"/>
 		</section>
 		<section name="audio">
 			<var name="MaxSingleSounds" value="6"/>
@@ -156,6 +168,9 @@
 			<var name="peaceplaylist" value="peace.m3u"/>
 			<var name="panicplaylist" value="panic.m3u"/>
 			<var name="threadtime" value="2000"/>	
+
+			<var name="Positional" value="true"/>
+			<var name="Volume"	value="100"/>
 		</section>
 		<section name="unitaudio">
 			<var name="afterburner" value="engine_5.wav"/>
