--- a/vegastrike.config
+++ b/vegastrike.config
@@ -112,14 +112,14 @@
 		<color name="target"		ref="pink"/>
 
 		<!-- light to use for ships -->
-		<color name="ship_ambient" r="0.8" g="0.8" b="0.8" a="1.0"/>
-		<color name="ship_diffuse" r="0.8" g="0.8" b="0.8" a="1.0"/>
-		<color name="ship_specular" r="0.3" g="0.3" b="0.3" a="1.0"/>
+		<color name="ship_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
 
 		<!-- light to use for planets -->
-		<color name="planets_ambient" r="0.3" g="0.5" b="0.5" a="1.0"/>
-		<color name="planets_diffuse" r="0.6" g="0.8" b="0.8" a="1.0"/>
-		<color name="planets_specular" r="0.5" g="0.6" b="0.6" a="1.0"/>
+		<color name="planet_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
+		<color name="planet_mat_ambient" r="1" g="1" b="1" a="1.0"/>
+		<color name="planet_mat_diffuse" r="1" g="1" b="1" a="1.0"/>
+		<color name="planet_mat_specular" r="1" g="1" b="1" a="1.0"/>
+		<color name="planet_mat_emmissive" r="0" g="0" b="0" a="1.0"/>
 		<!-- set this to dark-blue to get the real spacey feeling -->
 		<color name="space_background" ref="dark-blue"/>
 
@@ -130,13 +130,18 @@
 			<var name="sharedsounds" value="sounds"/>
 		</section>
         	<section name="graphics">
-			<var name="x_resolution" value="1024"/>
-			<var name="y_resolution" value="768"/>
+			<var name="MouseCursor" value="true"/>
+			<var name="OptimizeVertexArrays" value="true"/>
+			<var name="OptimizeVertexCondition" value="1"/>
+			<var name="MouseCursor" value="true"/>
+			<var name="ModelDetail" value="1"/>
+			<var name="x_resolution" value="640"/>
+			<var name="y_resolution" value="480"/>
 			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
-			<var name="colordepth" value="16"/>
-			<var name="displaylists" value="false"/>
+			<var name="colordepth" value="32"/>
+			<var name="displaylists" value="true"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="4.0"/>
@@ -144,12 +149,12 @@
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
-			<var name="cockpit" value="false"/>
-
+			<var name="cockpit" value="true"/>
+			<var name="planet_detail" value="64"/>
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
 			<var name="lightsaturation" value="0.95"/>
-			<var name="separatespecularcolor" value="false"/>
+			<var name="separatespecularcolor" value="true"/>
 			<var name="numlights"	value="4"/>
 
 			<var name="MouseCursor"  value="false"/>
@@ -159,6 +164,7 @@
 			<var name="ModelDetail" value="1"/>
 		</section>
 		<section name="audio">
+			<var name="Positional" value="false"/>
 			<var name="MaxSingleSounds" value="6"/>
 			<var name="MaxTotalSounds" value="27"/>
 			<var name="frequency" value="22050"/>
@@ -175,10 +181,10 @@
 		<section name="unitaudio">
 			<var name="afterburner" value="engine_5.wav"/>
 			<var name="cloak" value="sfx43.wav"/>
-			<var name="shield" value="sfx09.wav"/>
-			<var name="armor" value="sfx08.wav"/>
-			<var name="hull" value="sfx08.wav"/>
-			<var name="explode" value="EXPLOSIONPROMISING.wav"/>
+			<var name="shield" value="shieldhit2.wav"/>
+			<var name="armor" value="armorhit.wav"/>
+			<var name="hull" value="hullhit.wav"/>
+			<var name="explode" value="explosion.wav"/>
 		</section>
 		<section name="general">
 			<var name="click_and_select"	value="1"/>
