added more new sounds to vegaconfig

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -181,9 +181,9 @@
 		<section name="unitaudio">
 			<var name="afterburner" value="engine_5.wav"/>
 			<var name="cloak" value="sfx43.wav"/>
-			<var name="shield" value="shieldhit2.wav"/>
+			<var name="shield" value="shieldhit.wav"/>
 			<var name="armor" value="armorhit.wav"/>
-			<var name="hull" value="hullhit.wav"/>
+			<var name="hull" value="armorhit.wav"/>
 			<var name="explode" value="explosion.wav"/>
 		</section>
 		<section name="general">
