--- a/vegastrike.config
+++ b/vegastrike.config
@@ -130,12 +130,13 @@
 			<var name="sharedsounds" value="sounds"/>
 		</section>
         	<section name="graphics">
+			<var name="HaloOffset" value=".5"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="OptimizeVertexCondition" value="1"/>
-			<var name="MouseCursor" value="false"/>
+			<var name="MouseCursor" value="true"/>
 			<var name="ModelDetail" value="1"/>
-			<var name="x_resolution" value="1600"/>
-			<var name="y_resolution" value="1200"/>
+			<var name="x_resolution" value="1024"/>
+			<var name="y_resolution" value="768"/>
 			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
