--- a/vegastrike.config
+++ b/vegastrike.config
@@ -90,6 +90,7 @@
 
         </bindings>
         <colors>
+	    <section name="absolute">
 		<!-- absolute colors -->
                 <color name="red"	r="1.0" g="0.0" b="0.0" a="1.0"/>
                 <color name="green"	r="0.0" g="1.0" b="0.0" a="1.0"/>
@@ -101,15 +102,16 @@
                 <color name="light-blue"	r="0.68" g="0.9" b="1.0" a="1.0"/>
                 <color name="pink"	r="1.0" g="0.47" b="0.64" a="1.0"/>
                 <color name="dark-blue"	r="0.0" g="0.0" b="0.2" a="1.0"/>
-
+	    </section>
+	    <section name="default">
 		<!-- colors to use in radar/target rectangles -->
-		<color name="enemy"		ref="red"/>
-		<color name="friend"		ref="green"/>
-		<color name="neutral"		ref="yellow"/>
-		<color name="attacking_ship"	ref="blue"/>
-		<color name="locking_ship"	ref="violet"/>
-		<color name="targetting_ship"	ref="light-blue"/>
-		<color name="target"		ref="pink"/>
+		<color name="enemy"		section="absolute" ref="red"/>
+		<color name="friend"		section="absolute" ref="green"/>
+		<color name="neutral"		section="absolute" ref="yellow"/>
+		<color name="attacking_ship"	section="absolute" ref="blue"/>
+		<color name="locking_ship"	section="absolute" ref="violet"/>
+		<color name="targetting_ship"	section="absolute" ref="light-blue"/>
+		<color name="target"		section="absolute" ref="pink"/>
 
 		<!-- light to use for ships -->
 		<color name="ship_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
@@ -121,13 +123,17 @@
 		<color name="planet_mat_specular" r="0" g="0" b="0" a="1.0"/>
 		<color name="planet_mat_emmissive" r="0" g="0" b="0" a="1.0"/>
 		<!-- set this to dark-blue to get the real spacey feeling -->
-		<color name="space_background" ref="dark-blue"/>
-
+		<color name="space_background" ref="dark-blue" section="absolute"/>
+	    </section>
         </colors>
 	<variables>
 		<section name="data">
 			<var name="sharedtextures" value="textures"/>
 			<var name="sharedsounds" value="sounds"/>
+		</section>
+        	<section name="graphics/general">
+		</section>
+        	<section name="graphics/mesh">
 		</section>
         	<section name="graphics">
 			<var name="HaloOffset" value=".5"/>
