--- a/vegastrike.config
+++ b/vegastrike.config
@@ -104,6 +104,8 @@
                 <color name="dark-blue"	r="0.0" g="0.0" b="0.2" a="1.0"/>
 	    </section>
 	    <section name="default">
+		<!-- <color name="testcolor" r="0.5" b="0.7" g="0.4" a="0.3"/> -->
+
 		<!-- colors to use in radar/target rectangles -->
 		<color name="enemy"		section="absolute" ref="red"/>
 		<color name="friend"		section="absolute" ref="green"/>
@@ -188,6 +190,7 @@
 		<section name="general">
 			<var name="click_and_select"	value="1"/>
 			<var name="joystick_deadband" 	value="0.1"/>
+			<var name="testvar"		value="unix"/>
         	</section>
 		<section name="player">
 			<var name="realname" 	value="Alexander Rawass"/>
