--- a/vegastrike.config
+++ b/vegastrike.config
@@ -138,6 +138,8 @@
         	<section name="graphics/mesh">
 		</section>
         	<section name="graphics">
+			<var name="LogoOffset" value="-4"/>
+			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="OptimizeVertexCondition" value="1"/>
