--- a/vegastrike.config
+++ b/vegastrike.config
@@ -150,7 +150,7 @@
 			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
-			<var name="colordepth" value="32"/>
+			<var name="colordepth" value="16"/>
 			<var name="displaylists" value="true"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
@@ -164,7 +164,7 @@
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
 			<var name="lightsaturation" value="0.95"/>
-			<var name="separatespecularcolor" value="true"/>
+			<var name="separatespecularcolor" value="false"/>
 			<var name="numlights"	value="4"/>
 		</section>
 		<section name="audio">
