--- a/vegastrike.config
+++ b/vegastrike.config
@@ -103,6 +103,11 @@
                 <color name="pink"	r="1.0" g="0.47" b="0.64" a="1.0"/>
                 <color name="dark-blue"	r="0.0" g="0.0" b="0.2" a="1.0"/>
 	    </section>
+	    <section name="unit">
+		<!-- light to use for ships -->
+		<color name="ship_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
+<!--		<color name="engine" r="1" g="0" b="0" a="1"/>-->
+            </section>
 	    <section name="default">
 		<!-- <color name="testcolor" r="0.5" b="0.7" g="0.4" a="0.3"/> -->
 
@@ -115,8 +120,6 @@
 		<color name="targetting_ship"	section="absolute" ref="light-blue"/>
 		<color name="target"		section="absolute" ref="pink"/>
 
-		<!-- light to use for ships -->
-		<color name="ship_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
 
 		<!-- light to use for planets -->
 		<color name="planet_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
