added a lot of starships

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -106,7 +106,7 @@
 	    <section name="unit">
 		<!-- light to use for ships -->
 		<color name="ship_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
-<!--		<color name="engine" r="1" g="0" b="0" a="1"/>-->
+		<color name="engine" r="1" g="1" b="1" a="1"/>
             </section>
 	    <section name="default">
 		<!-- <color name="testcolor" r="0.5" b="0.7" g="0.4" a="0.3"/> -->
@@ -146,7 +146,7 @@
 			<var name="HaloOffset" value=".5"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="OptimizeVertexCondition" value="1"/>
-			<var name="MouseCursor" value="true"/>
+			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="1024"/>
 			<var name="y_resolution" value="768"/>
@@ -164,10 +164,10 @@
 			<var name="background" value="true"/>
 			<var name="cockpit" value="true"/>
 			<var name="planet_detail" value="64"/>
-			<var name="lightcutoff" value="0.06"/>
+			<var name="lightcutoff" value="0.04"/>
 			<var name="lightoptimalintensity" value="0.06"/>
 			<var name="lightsaturation" value="0.95"/>
-			<var name="separatespecularcolor" value="false"/>
+			<var name="separatespecularcolor" value="true"/>
 			<var name="numlights"	value="4"/>
 		</section>
 		<section name="audio">
