--- a/geforce2.config
+++ b/geforce2.config
@@ -150,8 +150,8 @@
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="1"/>
-			<var name="x_resolution" value="800"/>
-			<var name="y_resolution" value="600"/>
+			<var name="x_resolution" value="1024"/>
+			<var name="y_resolution" value="768"/>
 			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
@@ -164,17 +164,17 @@
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
-			<var name="cockpit" value="false"/>
+			<var name="cockpit" value="true"/>
 			<var name="planet_detail" value="24"/>
 			<var name="lightcutoff" value="0.06"/>
-			<var name="lightoptimalintensity" value="0.08"/>
+			<var name="lightoptimalintensity" value="0.06"/>
 			<var name="lightsaturation" value="0.95"/>
-			<var name="separatespecularcolor" value="true"/>
+			<var name="separatespecularcolor" value="false"/>
 			<var name="numlights"	value="4"/>
 		</section>
 		<section name="audio">
 			<var name="Positional" value="true"/>
-			<var name="MaxSingleSounds" value="5"/>
+			<var name="MaxSingleSounds" value="6"/>
 			<var name="MaxTotalSounds" value="30"/>
 			<var name="frequency" value="22050"/>
 			<var name="Sound" value="true"/>
