--- a/trunk/data/tnt.config
+++ b/trunk/data/tnt.config
@@ -153,7 +153,7 @@
 			<var name="x_resolution" value="800"/>
 			<var name="y_resolution" value="600"/>
 			<var name="mipmapdetail" value="2"/>
-			<var name="reflection" value="true"/>
+			<var name="reflection" value="false"/>
 			<var name="fullscreen" value="false"/>
 			<var name="colordepth" value="16"/>
 			<var name="displaylists" value="false"/>
