--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -149,33 +149,35 @@
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="MouseCursor" value="false"/>
-			<var name="ModelDetail" value="1"/>
-			<var name="x_resolution" value="800"/>
-			<var name="y_resolution" value="600"/>
-			<var name="mipmapdetail" value="2"/>
+			<var name="ModelDetail" value="10"/>
+			<var name="x_resolution" value="1240"/>
+			<var name="y_resolution" value="1024"/>
+			<var name="mipmapdetail" value="3"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
-			<var name="colordepth" value="16"/>
+			<var name="colordepth" value="32"/>
 			<var name="displaylists" value="false"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="4.0"/>
-                	<var name="zfar" value="100000"/>
+                	<var name="zfar" value="200000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
-			<var name="cockpit" value="false"/>
-			<var name="planet_detail" value="24"/>
-			<var name="lightcutoff" value="0.06"/>
-			<var name="lightoptimalintensity" value="0.08"/>
+			<var name="cockpit" value="true"/>
+			<var name="planet_detail" value="64"/>
+			<var name="lightcutoff" value="0.04"/>
+			<var name="lightoptimalintensity" value="0.06"/>
 			<var name="lightsaturation" value="0.95"/>
 			<var name="separatespecularcolor" value="true"/>
 			<var name="numlights"	value="4"/>
 		</section>
 		<section name="audio">
 			<var name="Positional" value="true"/>
-			<var name="MaxSingleSounds" value="5"/>
-			<var name="MaxTotalSounds" value="30"/>
+			<var name="Doppler" value="false"/>
+			<var name="DopplerScale" value="1"/>
+			<var name="MaxSingleSounds" value="3"/>
+			<var name="MaxTotalSounds" value="24"/>
 			<var name="frequency" value="22050"/>
 			<var name="Sound" value="true"/>
 			<var name="Music" value="false"/>
