--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -174,13 +174,11 @@
 		</section>
 		<section name="audio">
 			<var name="Positional" value="true"/>
-			<var name="Doppler" value="false"/>
-			<var name="DopplerScale" value="1"/>
-			<var name="MaxSingleSounds" value="3"/>
+			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
 			<var name="frequency" value="22050"/>
 			<var name="Sound" value="true"/>
-			<var name="Music" value="false"/>
+			<var name="Music" value="true"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
 			<var name="panicplaylist" value="panic.m3u"/>
