--- a/vegastrike.config
+++ b/vegastrike.config
@@ -166,7 +166,7 @@
 			<var name="background" value="true"/>
 			<var name="cockpit" value="true"/>
 			<var name="planet_detail" value="64"/>
-			<var name="lightcutoff" value="0.04"/>
+			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
 			<var name="lightsaturation" value="0.95"/>
 			<var name="separatespecularcolor" value="true"/>
@@ -177,8 +177,8 @@
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
 			<var name="frequency" value="22050"/>
-			<var name="Sound" value="true"/>
-			<var name="Music" value="true"/>
+			<var name="Sound" value="false"/>
+			<var name="Music" value="false"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
 			<var name="panicplaylist" value="panic.m3u"/>
