--- a/vegastrike.config
+++ b/vegastrike.config
@@ -196,6 +196,9 @@
 			<var name="hull" value="armorhit.wav"/>
 			<var name="explode" value="explosion.wav"/>
 		</section>
+		<section name="joystick">
+			<var name="deadband"	value="0.05"/>
+		</section>
 		<section name="general">
 			<var name="click_and_select"	value="1"/>
 			<var name="joystick_deadband" 	value="0.1"/>
