joystick deadzone bugfix
2001-11-08 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified vegastrike.spec
	* added data/vegastrike-data.spec
	* set version in configure.in to 0.1.0cvs
	* added data/Makefile.dist
	* added variable joystick/deadband to vegastrike.config
	* using now this variable in in_joystick

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -196,6 +196,9 @@
 			<var name="hull" value="armorhit.wav"/>
 			<var name="explode" value="explosion.wav"/>
 		</section>
+		<section name="joystick">
+			<var name="deadband"	value="0.05"/>
+		</section>
 		<section name="general">
 			<var name="click_and_select"	value="1"/>
 			<var name="joystick_deadband" 	value="0.1"/>
