added terrain ambient

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -112,6 +112,9 @@
 		<color name="ship_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
 		<color name="engine" r="1" g="1" b="1" a="1"/>
             </section>
+	    <section name="terrain">
+		<color name="terrain_ambient" r="0.0" g="0.0" b="0.0" a="1.0"/>
+	    </section>
 	    <section name="default">
 		<!-- <color name="testcolor" r="0.5" b="0.7" g="0.4" a="0.3"/> -->
 
@@ -139,6 +142,9 @@
 		<section name="data">
 			<var name="sharedtextures" value="textures"/>
 			<var name="sharedsounds" value="sounds"/>
+		</section>
+		<section name="physics">
+			<var name="terrainmass" value="100"/>
 		</section>
         	<section name="graphics/general">
 		</section>
