gethexColor/dig. hatswitch
2001-11-22 Alexander Rawass <alexannika@users.sourceforge.net>

	* gethColor now correcly uses hexcolor argument
	* modified cmd/unit_xml and cmd/terrain to use gethColor instead of getColor
	* digital hatswitch first try

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -86,6 +86,17 @@
 		<bind hatswitch="0" button="3" modifier="none" command="Cockpit::InsideLeft" />
 -->
 
+<!--
+
+		<bind joystick="0" digital-hatswitch="0" direction="up" command="ABKey"/>
+		<bind joystick="0" digital-hatswitch="0" direction="left" command="TargetKey"/>
+	<bind joystick="0" digital-hatswitch="0" direction="center" command="ABKey"/>
+
+		<bind joystick="0" digital-hatswitch="0" direction="right" command="ABKey"/>
+
+-->
+
+
 		<!-- for the future
 			<axis name="gun_x" joystick="1" axis="0"/>
 			<axis name="gun_y" joystick="1" axis="1"/>
