added terrain var

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -155,8 +155,11 @@
 			<var name="sharedtextures" value="textures"/>
 			<var name="sharedsounds" value="sounds"/>
 		</section>
-		<section name="physics">
-			<var name="terrainmass" value="100"/>
+		<section name="terrain">
+			<var name="mass" value="100"/>
+			<var name="xscale" value="1"/>
+			<var name="yscale" value="10"/>
+			<var name="zscale" value="1"/>
 		</section>
         	<section name="graphics/general">
 		</section>
