nice new terrain

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -157,9 +157,10 @@
 		</section>
 		<section name="terrain">
 			<var name="mass" value=".0000001"/>
-			<var name="xscale" value="10"/>
-			<var name="yscale" value="10"/>
-			<var name="zscale" value="10"/>
+			<var name="radius" value="0000"/>
+			<var name="xscale" value="5.0"/>
+			<var name="yscale" value="2.0"/>
+			<var name="zscale" value="5.0"/>
 		</section>
         	<section name="graphics/general">
 		</section>
