modified explosions to comply with new format

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -156,7 +156,7 @@
 			<var name="sharedsounds" value="sounds"/>
 		</section>
 		<section name="terrain">
-			<var name="mass" value=".0000001"/>
+			<var name="mass" value="100.0000001"/>
 			<var name="radius" value="0000"/>
 			<var name="xscale" value="2.5"/>
 			<var name="yscale" value="3.5"/>
