interpreter: exec and arguments
2001-12-03 Alexander Rawass <alexannika@users.sourceforge.net>

	* added more script tests
	* improved interpreter
	  - multiple scripts in module
	  - exec to call scripts from scripts
	  - arguments to exec
	* added section "interpreter" to vegastrike.conf
	  added variable "debuglevel" to that section

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -230,12 +230,15 @@
 		<section name="general">
 			<var name="simulation_atom" value="0.076"/>
         	</section>
+		<section name="interpreter">
+			<var name="debuglevel" value="0"/>
+		</section>
 		<section name="player">
-			<var name="realname" 	value="Alexander Rawass"/>
-			<var name="email" 	value="alexannika@users.sourceforge.net"/>
+			<var name="realname" 	value="insert-name-here"/>
+			<var name="email" 	value="email@where-ever.net"/>
 			<var name="homepage"	value="none"/>
-			<var name="callsign" 	value="StinkFist"/>
-			<var name="logo" 	value="stinkfist.bmp"/>
+			<var name="callsign" 	value="Unknown"/>
+			<var name="logo" 	value="unknown.bmp"/>
 		</section>
 	</variables>
 </vegaconfig>
