debug_digital_hatswitch
2001-12-07 Alexander Rawass <alexannika@users.sourceforge.net>

	* digital hatswitch code can be turned off/on with
	  debug_digital_hatswitch in section joystick

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -227,6 +227,7 @@
 		</section>
 		<section name="joystick">
 			<var name="deadband"	value="0.05"/>
+			<var name="debug_digital_hatswitch"  value="false"/>
 		</section>
 		<section name="general">
 			<var name="simulation_atom" value="0.076"/>
