improved olist code
2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>

	* added file src/cmd/script/script_call_olist.cpp
	* improved olist code
	* added variable 'startgame' to section 'interpreter' in
	  vegastrike.config

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -234,6 +234,7 @@
         	</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="0"/>
+			<var name="startgame"  value="true"/>
 		</section>
 		<section name="player">
 			<var name="realname" 	value="insert-name-here"/>
