modified cockpit (target boxes,itts)
2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified Cockpit:
	  - to draw a box around all units
	    config var drawAllTargetBoxes controls that behaviour
	  - to always draw the ITTS (var drawAlwaysITTS)
	  - to use more colors on the radar/the target boxes

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -109,7 +109,7 @@
                 <color name="red"	r="1.0" g="0.0" b="0.0" a="1.0"/>
                 <color name="green"	r="0.0" g="1.0" b="0.0" a="1.0"/>
                 <color name="blue"	r="0.0" g="0.0" b="1.0" a="1.0"/>
-                <color name="yellow"	r="0.0" g="1.0" b="1.0" a="1.0"/>
+                <color name="yellow"	r="1.0" g="1.0" b="0.0" a="1.0"/>
                 <color name="black"	r="0.0" g="0.0" b="0.0" a="1.0"/>
                 <color name="white"	r="1.0" g="1.0" b="1.0" a="1.0"/>
                 <color name="violet"	r="1.0" g="0.0" b="1.0" a="1.0"/>
@@ -137,7 +137,8 @@
 		<color name="attacking_ship"	section="absolute" ref="blue"/>
 		<color name="locking_ship"	section="absolute" ref="violet"/>
 		<color name="targetting_ship"	section="absolute" ref="light-blue"/>
-		<color name="target"		section="absolute" ref="pink"/>
+		<color name="target"		section="absolute" ref="violet"/>
+		<color name="planet"		r="1.0" g="1.0" b="0.6" a="1.0" />
 
 
 		<!-- light to use for planets -->
@@ -199,16 +200,18 @@
 			<var name="lightsaturation" value="0.95"/>
 			<var name="separatespecularcolor" value="true"/>
 			<var name="numlights"	value="4"/>
+			<var name="drawAllTargetBoxes" value="true" />
+			<var name="drawAlwaysITTS" value="true" />
 		</section>
 		<section name="audio">
 			<var name="Positional" value="true"/>
-			<var name="Doppler" value="true"/>
+			<var name="Doppler" value="false"/>
 			<var name="DopplerScale" value=".1"/>
 
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
 			<var name="frequency" value="22050"/>
-			<var name="Sound" value="false"/>
+			<var name="Sound" value="true"/>
 			<var name="Music" value="false"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
@@ -233,7 +236,7 @@
 			<var name="simulation_atom" value="0.076"/>
         	</section>
 		<section name="interpreter">
-			<var name="debuglevel" value="0"/>
+			<var name="debuglevel" value="1"/>
 			<var name="startgame"  value="true"/>
 		</section>
 		<section name="player">
