added warp effect

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -172,6 +172,9 @@
 	        	<section name="mesh">
 				<var name="testvar" value="-4"/>
 			</section>
+			<var name="jumpgatesize" value="17.5"/>
+			<var name="jumpgate" value="warp.ani"/>
+
 			<var name="LogoOffset" value="-4"/>
 			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
