added page up and down scrolling

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -52,6 +52,8 @@
                 <bind key="z" modifier="none" command="Cockpit::PitchUp"/>
                 <bind key="a" modifier="none" command="Cockpit::YawLeft"/>
                 <bind key="s" modifier="none" command="Cockpit::YawRight"/>
+                <bind key="cursor-pagedown" modifier="none" command="Cockpit::ScrollDown"/>
+                <bind key="cursor-pageup" modifier="none" command="Cockpit::ScrollUp"/>
 
                 <bind key="esc" modifier="none" command="Cockpit::Quit"/>
 
